--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h2 class="mt-5 mb-5">
+    <h2 class="mt-5 mb-5" style="text-align: center;">
         Book Store
     </h2>
     <button class="btn btn-success " id="showAddForm" onclick="showAddForm()">Add Book</button>
